syntax="proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
//import "payment.proto";


message PurshasedItem
{
 int32 id=1;
 optional google.protobuf.Any props=2;
}
message Purshase
{
  int32 id=1;
  repeated PurshasedItem items=2;
  optional int32 userId=3;
  optional int32 paymentId=4;
  optional google.protobuf.Timestamp created_at=5;
  optional google.protobuf.Timestamp updated_at=6;
}

message GetAllPurshaseReq{
 int32 userId=1;
}
message GetAllPurshaseRes{
 int32 userId=1;
 repeated Purshase purchases=2;
}
message CreatePurshaseReq{
 Purchase purchase=1;
}
message CreatePurshaseRes{
 Purchase purchase=1;
}
service PurshaseService {

 rpc all(GetAllPurshaseReq) returns (GetAllPurshaseRes);
 rpc create(CreatePurshaseReq) returns (CreatePurshaseRes);
}
